examples/parse_errors/bad_for.espr
for i in 0.. {
    print(i)
}
